implement getLatestTime for external DB syncing use cases

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "filesystem-timeseries-db",
   "version": "0.0.01",
   "repository": "https://github.com/cerealcoder/filesystem-timeseries-database",
-  "description": "A simple wrapper to get/set time-series data from a file system that is at least NFS v3 compatible",
+  "description": "A simple wrapper to set/get time-series data from a file system that is at least NFS v3 compatible",
   "main": "filesystem-timeseries-db.js",
   "scripts": {
     "test": "node_modules/tape/bin/tape"
