--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "filesystem-timeseries-db",
+  "name": "@umlss/filesystem-timeseries-db",
   "version": "0.0.01",
   "repository": "https://github.com/cerealcoder/filesystem-timeseries-database",
   "description": "A simple wrapper to set/get time-series data from a file system that is at least NFS v3 compatible",
