--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umlss/filesystem-timeseries-db",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "repository": "https://github.com/cerealcoder/filesystem-timeseries-database",
   "description": "A simple wrapper to set/get time-series data from a file system that is at least NFS v3 compatible",
   "main": "filesystem-timeseries-db.js",
@@ -13,15 +13,16 @@
     "bluebird": "^3.7.2",
     "mkdirp": "^1.0.4",
     "binary-search": "^1.3.6",
-    "node-gzip": "^1.1.2"
+    "node-gzip": "^1.1.2",
+    "minimist": "^1.2.6"
   },
   "peerDependencies": {
-    "underscore": "^1.9.1"
+    "underscore": "^1.13.2"
   },
   "devDependencies": {
     "tape": "^4.10.1",
     "tape-promise": "^4.0.0",
-    "underscore": "^1.9.1",
+    "underscore": "^1.13.2",
     "random-js": "^2.1.0"
   }
 }
